# claude-bpms-flow

./: .gitignore  CLAUDE.md  pyproject.toml  requirements-dev.txt
.claude/: settings.json
.claude/hooks/: inject-test-results.sh  run-tests.sh
docs/: README.md
docs/superpowers/plans/: 2026-05-04-process-editor-plan.md  2026-05-04-process-engine-plan.md  2026-05-04-test-subagent-plan.md
docs/superpowers/specs/: 2026-05-04-process-engine-design.md  2026-05-04-test-subagent-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  transformer.ts  types.ts
frontend/src/components/: FlowCanvas.tsx  NodeToolbar.tsx  ProcessCard.tsx  ProcessEditor.tsx  ProcessList.tsx  PropertyPanel.tsx
frontend/src/components/nodes/: EndNode.tsx  StartNode.tsx  UserTaskNode.tsx  index.ts
frontend/src/styles/: index.css
src/bpms/: __init__.py  __main__.py  cli.py  engine.py  server.py  store.py
src/bpms/api/: __init__.py  routes.py
src/bpms/models/: __init__.py  instance.py  node.py  process.py  serialization.py
src/bpms/static/: index.html
src/bpms/static/assets/: index-BJK9viiq.css  index-CRmsspu6.js
tests/: conftest.py
tests/e2e/: test_cli_flow.py
tests/integration/: test_workflow.py
tests/unit/: test_cli.py  test_engine.py  test_store.py
tests/unit/test_api/: test_routes.py
tests/unit/test_models/: test_instance.py  test_node.py  test_serialization.py
